2000-06-30  Dan Winship  <danw@helixcode.com>

	* mail-ops.c (print_msg): Use gnome-print to do a print preview.

	* folder-browser-factory.c: Hook up "Print" button.

	* message-list.c (message_list_foreach): New function, a wrapper
	around e_table_selected_row_foreach, which calls the callback
	function with UIDs rather than row numbers.

	* folder-browser-factory.c: Remove never-used "Find" button from
	the toolbar and replace it with "Refile". (We need a better icon
	for this...). Hook up "Refile" to "refile_msg".

	* mail-ops.c (refile_msg): Call the shell's user_select_folder
	routine, and then use message_list_foreach and real_refile_msg to
	do the work.
	(delete_msg): Update to use message_list_foreach.

	* folder-browser.c (mail_uri_to_folder): new function, extracted
	from folder_browser_load_folder, to turn a URI into a folder.
	(folder_browser_load_folder): Use it.

2000-06-30  Peter Williams  <peterw@curious-george.helixcode.com>

	* component-factory.c (create_news_storage, create_imap_storage):
	Fixed to use new EvolutionShellClient proxy thingamajiggie.

2000-06-30  Dan Winship  <danw@helixcode.com>

	* message-list.c (on_row_selection): use the ETable row_selection
	signal to track how many rows are selected. Eventually we will use
	this info to disable toolbar buttons when you have too few/too
	many messages selected, but the current toolbar widget doesn't
	allow that.

	* message-list.h, message-list.c, mail-ops.c: Change selected_row
	and selected_uid fields of MessageList to cursor_row and
	cursor_uid to be more correct according to the new ETable
	interfaces.

2000-06-30  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c: Eeek.  Fix typo: add missing star in the
	declaration of `global_shell_client'.

2000-06-29  Ettore Perazzoli  <ettore@helixcode.com>

	* component-factory.c: Replace `global_shell_interface' with
	`global_shell_client'.

2000-06-29  Jeffrey Stedfast  <fejj@helixcode.com>
