@@ -1,3 +1,11 @@
+2000-07-01  Jeffrey Stedfast  <fejj@helixcode.com>
+
+	* message-list.c (get_message_info):
+	(select_msg): Updated to reflect camel-folder changes.
+
+	* mail-ops.c (real_fetch_mail): Modified to reflect camel-folder
+	changes.
+
 2000-06-30  Dan Winship  <danw@helixcode.com>
 
 	* mail-ops.c (print_msg): Use gnome-print to do a print preview.
